Fix header logo on safari.

--- a/app/assets/stylesheets/components/navigation.scss
+++ b/app/assets/stylesheets/components/navigation.scss
@@ -13,13 +13,6 @@ $nav-menu-more-width: 150px;
     display: flex;
     align-items: center;
   }
-
-  .nav-logo {
-    &__img {
-      width: 100%;
-      height: 100%;
-    }
-  }
 }
 
 .nav-menu {
